# ferritex

./: .gitignore  Cargo.toml  README.md
crates/ferritex-bench/: Cargo.toml
crates/ferritex-bench/fixtures/: minimal_article.tex  multi_section.tex
crates/ferritex-bench/fixtures/bench/: ftx_bench_001.tex  ftx_stress_2000_cycle.tex
crates/ferritex-bench/fixtures/bundle/: BUNDLE_CONTRACT.md  asset-index.json  manifest.json
crates/ferritex-bench/fixtures/bundle-packages/: compat_options.tex  depchain_recursive.tex
crates/ferritex-bench/fixtures/corpus/bibliography/: alpha_style.bbl  alpha_style.tex  bib_in_chapter.bbl  bib_in_chapter.tex  bib_url_entries.tex  bib_with_sections.tex  cite_variations.tex  custom_labels.bbl  custom_labels.tex  inline_thebibliography.tex  long_bibliography.bbl  long_bibliography.tex  many_entries.bbl  many_entries.tex  multi_cite.bbl  (+5 more)
crates/ferritex-bench/fixtures/layout-core/: article.tex  book.tex  letter.tex  report.tex
crates/ferritex-bench/src/: harness.rs  lib.rs  parity.rs
crates/ferritex-cli/: Cargo.toml
crates/ferritex-cli/src/: lsp_server.rs  main.rs  watch_runner.rs
crates/ferritex-cli/tests/: bench_bundle_bootstrap.rs  bench_full_profile.rs  bench_lsp_latency.rs  docs_performance_claims.rs  e2e_compile.rs  perf_evidence_cli.rs
crates/ferritex-infra/: Cargo.toml
crates/ferritex-infra/src/: lib.rs
crates/ferritex-infra/src/asset_bundle/: loader.rs  mod.rs
crates/ferritex-infra/src/fs/: file_access_gate.rs  mod.rs
crates/ferritex-infra/src/preview/: loopback_transport.rs  mod.rs
crates/ferritex-infra/src/shell/: command_gateway.rs  mod.rs
crates/ferritex-infra/src/watcher/: mod.rs  polling_file_watcher.rs
(+199 files in other folders)
