[workspace]
members = [
    "crates/ferritex-cli",
    "crates/ferritex-application",
    "crates/ferritex-core",
    "crates/ferritex-infra",
    "crates/ferritex-bench",
]
resolver = "2"

[workspace.dependencies]
bincode = "1"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "1.0.69"
tracing = "0.1.41"
