[package]
name = "ferritex-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
ferritex-application = { path = "../ferritex-application" }
ferritex-core = { path = "../ferritex-core" }
